tests/snapshots/integration__xpub_info_basic_tokens.snap
---
source: blockbook/tests/integration.rs
expression: xpub_info
---
{
  "address": "zpub6qd36EtRVbyDyJToANn1vnuvhGenvepKnjeUzBXDk7JE4JYBxGUAPbjh22QqZ7JkRGuAtpgBfgKP1iT9GzgQxP1TgKPEBoN3e3vN3WtY2Su",
  "balance": "821",
  "totalReceived": "821",
  "totalSent": "0",
  "unconfirmedBalance": "0",
  "unconfirmedTxs": 0,
  "txs": 1,
  "addrTxCount": 1,
  "usedTokens": 1,
  "secondaryValue": null,
  "tokens": [
    {
      "type": "XPUBAddress",
      "name": "bc1q5au2nmza9pmplnvgzyd4ky7egu2wya56qa024u",
      "path": "m/84'/0'/0'/0/0",
      "transfers": 1,
      "decimals": 8,
      "balance": "821",
      "totalReceived": "821",
      "totalSent": "0"
    }
  ]
}
